		HotSpot can inline methods which throw exceptions.  Furthermore it appears
		that having this method in the add(), get(), and set() methods now
		inexplicitly slows them down considerably compared to ArrayList's versions
		due to undocumented modifications in current versions of HotSpot.
	Bag, IntBag, and DoubleBag no longer throw IndexOutOfBoundsException but rather
		ArrayIndexOutOfBoundsException.  This is technically a lie: the upper end
		of the array may not be exceeded but the Bag's length is.  However doing
		so has two advantages.  First, it's consistent with exceeding the lower
		part of the array (which always threw an ArrayIndexOutOfBoundsException),
		and secondly, in Oracle's wisdom, ArrayIndexOutOfBoundsEception can
		take a single number while IndexOutOfBoundsException can only take a
		String.  By only passing in a single number, we can still make set()
		inlinable even though we're now throwing exceptions rather than calling
		thowIndexOutOfBoundsException() (see immediately above).
	Bug fix to MovablePortrayal2D, which might throw a NullPointerException if
		the underlying object disappeared prior to handleMouseEvent being called.
		Thanks to Chris Wray <chris.x.898@gmail.com>
	ObjectGrid2D's getNeighbors...() functions no longer add 'null' into the result
		Bag as if it were an object.  'null' values are simply ignored.  This
		makes the methods consistent with DenseGrid2D and SparseGrid2D but a bit
		different from DoubleGrid2D and IntGrid2D.
	Added "name" property option to properties.
	Fixed bug in SimpleProperties where property indexes were allowed to
		equal numProperties (rather than numProperties -1).  
	Fixed documentation errors in the Manual describing the WCSS Tutorial.  Thanks to
		Stephen Davies <stephen@umw.edu>
	Updated JFreeChart to refer to http://jfree.org/jfreechart/.  Thanks to Stephen
		Davies <stephen@umw.edu>
	Display2D.setScale() now resets the viewport so the scroll bars are properly 
		updated.